remove slack and home. Change help icon

--- a/desktop/header.html
+++ b/desktop/header.html
@@ -6,7 +6,7 @@ api.decorateWidget('header-icons:before', helper => {
             href:'https://help.ministryoftesting.com/collection/5-community',
             title: 'Get Support on How To Use The Club',
             target: '_blank'
-        }, iconNode('far-circle-question', {class: 'paper-plane-icon'})),
+        }, iconNode('far-circle-question', {class: 'circle-question-icon'})),
     ]);
 });
 </script>
