--- a/common/header.html
+++ b/common/header.html
@@ -197,8 +197,7 @@
                 <span class="sidebar-section-header-text"> Camp d'entraînement </span>
               </button>
           </div>
-          <ul class="sidebar-section-content" id="customNavigation"/>
-      `
+          <ul class="sidebar-section-content" id="customNavigation"/>`
 
     $(document).ready(function () {
         // Create the links
