--- a/common/header.html
+++ b/common/header.html
@@ -178,7 +178,7 @@
 </script>
 
 <script>
-    let rss = `<use xlink:href="fa-brands.svg#twitter">
+    let rss = `<use xlink:href="fa-brands.svg#twitter">`
     let mdiSchool = `<path d="M12,3L1,9L12,15L21,10.09V17H23V9M5,13.18V17.18L12,21L19,17.18V13.18L12,17L5,13.18Z"></path>`
     let logo = `<g xmlns="http://www.w3.org/2000/svg" fill="#0e1e2b">
     <path d="M77.4 196.2 c-8 -6.9 -11.4 -16.9 -11.4 -33.2 0.1 -20.9 2.4 -30.2 6.7 -27.4 2.9 1.8 4.3 9.4 5.4 28.9 0.9 16.5 1.4 19.8 3.6 25 1.3 3.3 2.5 6.7 2.6 7.5 0.3 2.6 -3.6 2.1 -6.9 -0.8z"/>
