--- a/common/header.html
+++ b/common/header.html
@@ -187,7 +187,7 @@
     div.innerHTML = `
             <a href="https://www.latranchee.com" class="sidebar-section-link sidebar-section-link-everything sidebar-row">
               <span class="sidebar-section-link-prefix icon">
-                <svg viewBox="0 0 100 100" class="logoIcon" xmlns="http://www.w3.org/2000/svg">${contribute}</svg>
+                <svg class="logoIcon" xmlns="http://www.w3.org/2000/svg">${contribute}</svg>
               </span>
               <span class="sidebar-section-link-content-text"> Accueil </span>
             </a>
@@ -241,7 +241,7 @@
                             customNavigation.append(linkDiv)
                             let linkIcon = document.getElementById("link_" + link.title)
                             if (linkIcon && link.svg) {
-                                linkIcon.innerHTML = `<svg viewBox="${link.viewbox}" class=${link.iconclass} xmlns="http://www.w3.org/2000/svg"> ${link.svg}</svg>`
+                                linkIcon.innerHTML = `<svg class=${link.iconclass} xmlns="http://www.w3.org/2000/svg"> ${link.svg}</svg>`
                             }
                         })
                     }
