--- a/common/header.html
+++ b/common/header.html
@@ -241,7 +241,7 @@
                             customNavigation.append(linkDiv)
                             let linkIcon = document.getElementById("link_" + link.title)
                             if (linkIcon && link.svg) {
-                                linkIcon.innerHTML = `<svg class=${link.iconclass} xmlns="http://www.w3.org/2000/svg"> ${link.svg}</svg>`
+                                linkIcon.innerHTML = `<svg class="${link.iconclass}" xmlns="http://www.w3.org/2000/svg"> ${link.svg}</svg>`
                             }
                         })
                     }
