--- a/common/header.html
+++ b/common/header.html
@@ -197,8 +197,8 @@
     customHeader.className = "sidebar-section-wrapper sidebar-section-community"
     customHeader.innerHTML = `
             <div class="sidebar-section-header-wrapper sidebar-row">
-              <button id="ember11" class="sidebar-section-header sidebar-section-header-collapsable btn-flat btn no-text" type="button">
-                <span class="sidebar-section-header-text"> Camp d'entraînement </span>
+              <button id="ember11" class="sidebar-section-header sidebar-section-header-collapsable btn-flat no-text" type="button">
+                <span class="sidebar-section-header-text"> Ministry of Testing </span>
               </button>
           </div>
           <ul class="sidebar-section-content" id="customNavigation"/>`
@@ -207,8 +207,8 @@
         // Create the links
         const links = [
             { title: "Learn", src: "https://ministryoftesting.com/learn", svg: learn, iconclass: "fa d-icon d-icon-graduation-cap svg-icon svg-node" },
-            { title: "Formations", src: "https://ministryoftesting.com/events", svg: events, iconclass: "fa d-icon d-icon-calendar-alt svg-icon svg-node" },
-            { title: "Blogue", src: "https://ministryoftesting.com/contribute", svg: contribute, iconclass: "fa d-icon d-icon-pencil-alt svg-icon svg-node" },
+            { title: "Events", src: "https://ministryoftesting.com/events", svg: events, iconclass: "fa d-icon d-icon-calendar-alt svg-icon svg-node" },
+            { title: "Contribute", src: "https://ministryoftesting.com/contribute", svg: contribute, iconclass: "fa d-icon d-icon-pencil-alt svg-icon svg-node" },
         ]
 
         // Mobile
