--- a/common/footer.html
+++ b/common/footer.html
@@ -6,11 +6,11 @@
     <a href="https://twitter.com/ministryoftest">
       <svg class="fab d-icon d-icon-twitter svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-twitter"></use></svg>
     </a>
-    <a href="https://www.instagram.com/ministryoftesting/">
-      <svg class="fab d-icon d-icon-instagram svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-instagram"></use></svg>
+    <a href="https://www.youtube.com/@MinistryofTesting/">
+      <svg class="fab d-icon d-icon-youtube svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-youtube"></use></svg>
     </a>
   </div>
   <footer class="d-footer">
-      A Ministry of Testing Production. &copy; 2010-2022 Ministry of Testing Ltd. All rights reserved.
+      A Ministry of Testing Production. &copy; 2010-2023 Ministry of Testing Ltd. All rights reserved.
   </footer>
 </div>
