Change twitter icon to x

--- a/common/header.html
+++ b/common/header.html
@@ -170,3 +170,7 @@
     </div>
   {{/each}}
 </script>
+
+<script type="text/discourse-plugin" version="0.11">
+  api.replaceIcon('fab-twitter', 'temporary-twitter-x');
+</script>
