--- a/common/header.html
+++ b/common/header.html
@@ -2,7 +2,7 @@
 
 <script type="text/discourse-plugin" version="0.8">
   api.modifyClass("component:topic-list", {
-    showLikes: true
+    showLikes: true,
     pluginId: "mot-graceful"
   });
 </script>
