--- a/common/footer.html
+++ b/common/footer.html
@@ -3,8 +3,8 @@
     <a href="https://uk.linkedin.com/company/ministry-of-testing">
       <svg class="fab d-icon d-icon-linkedin svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-linkedin"></use></svg>
     </a>
-    <a href="https://twitter.com/ministryoftest">
-      <svg class="fab d-icon d-icon-twitter svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-twitter"></use></svg>
+    <a href="https://www.threads.net/@ministryoftesting">
+      <svg class="fab d-icon d-icon-threads svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-threads"></use></svg>
     </a>
     <a href="https://www.youtube.com/@MinistryofTesting/">
       <svg class="fab d-icon d-icon-youtube svg-icon svg-node" aria-hidden="true"><use xlink:href="#fab-youtube"></use></svg>
